Bug 286412 - Sorting by EXIF date broken
Summary: Sorting by EXIF date broken
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-12 13:04 UTC by RalphB
Modified: 2012-10-19 13:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RalphB 2011-11-12 13:04:55 UTC
Version:           2.7 (using KDE 4.7.2) 
OS:                Linux

When "Sort by Date" is selected, Gwenview always sorts by file date instead of EXIF date even when EXIF information is present in the JPG files (it is shown correctly in the meta information tab).

(In fact I couldn't remember if sorting by EXIF date is even supported by Gwenview, but bug reports 242332 and 281720 seem to suggest so.)

The date-related EXIF tags in my files are:

0x0132 Date and Time
0x9003 Date and Time (Original)
0x9004 Date and Time (Digitized)


Reproducible: Always

Steps to Reproduce:
Touch some JPGs with EXIF data so that file date order differs from EXIF date order.

Actual Results:  
Sorted by file date

Expected Results:  
Sorted by EXIF date
Comment 1 Aurelien Gateau 2012-07-10 12:47:35 UTC
Git commit 7e3963a6e8074618af8167d6e4330920db2776c2 by Aurélien Gâteau.
Committed on 10/07/2012 at 14:41.
Pushed by gateau into branch 'KDE/4.9'.

Fix reading of exif date in images

KFileMetaInfo (actually the Strigi jpeg indexer) changed its format and I
am not sure the new format is correct. For now it is simpler to directly
use Exiv2. This should actually be faster than going through
KFileMetaInfo > Strigi > Exiv2.
FIXED-IN: 2.9.0

M  +1    -0    lib/CMakeLists.txt
M  +61   -11   lib/timeutils.cpp

http://commits.kde.org/gwenview/7e3963a6e8074618af8167d6e4330920db2776c2