Fix reading of exif date in images

KFileMetaInfo (actually the Strigi jpeg indexer) changed its format and I
am not sure the new format is correct. For now it is simpler to directly
use Exiv2. This should actually be faster than going through
KFileMetaInfo > Strigi > Exiv2.

BUG: 286412
FIXED-IN: 2.9.0