lib/timeutils.cpp
@@ -22,14 +22,20 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Cambridge, MA 02110-1301, USA
 #include "timeutils.h"
 
 // Qt
-#include <QHash>
+#include <QFile>
 
 // KDE
 #include <KDateTime>
 #include <KDebug>
 #include <KFileItem>
-#include <KFileMetaInfo>
-#include <KFileMetaInfoItem>
+
+// Exiv2
+#include <exiv2/exif.hpp>
+#include <exiv2/image.hpp>
+
+// Local
+#include <lib/exiv2imageloader.h>
+#include <lib/urlutils.h>
 
 namespace Gwenview
 {
@@ -50,17 +56,61 @@ struct CacheItem
         }
 
         fileMTime = time;
-        const KFileMetaInfo info = fileItem.metaInfo();
-        if (info.isValid()) {
-            const KFileMetaInfoItem& mii = info.item("http://www.semanticdesktop.org/ontologies/2007/01/19/nie#contentCreated");
-            KDateTime dt(mii.value().toDateTime(), KDateTime::LocalZone);
-            if (dt.isValid()) {
-                realTime = dt;
-                return;
+
+        if (!updateFromExif(fileItem.url())) {
+            realTime = time;
+        }
+    }
+
+    bool updateFromExif(const KUrl& url)
+    {
+        if (!UrlUtils::urlIsFastLocalFile(url)) {
+            return false;
+        }
+        QString path = url.path();
+        Exiv2ImageLoader loader;
+        QByteArray header;
+        {
+            QFile file(path);
+            if (!file.open(QIODevice::ReadOnly)) {
+                kWarning() << "Could not open" << path << "for reading";
+                return false;
             }
+            header = file.read(65536); // FIXME: Is this big enough?
         }
 
-        realTime = time;
+        if (!loader.load(header)) {
+            return false;
+        }
+        Exiv2::Image::AutoPtr img = loader.popImage();
+        try {
+            Exiv2::ExifData exifData = img->exifData();
+            if (exifData.empty()) {
+                return false;
+            }
+            Exiv2::ExifKey key("Exif.Image.DateTime");
+            Exiv2::ExifData::iterator it = exifData.findKey(key);
+            if (it == exifData.end()) {
+                kWarning() << "No date in exif header of" << path;
+                return false;
+            }
+
+            std::ostringstream stream;
+            stream << *it;
+            QString value = QString::fromLocal8Bit(stream.str().c_str());
+
+            KDateTime dt = KDateTime::fromString(value, "%Y:%m:%d %H:%M:%S");
+            if (!dt.isValid()) {
+                kWarning() << "Invalid date in exif header of" << path;
+                return false;
+            }
+
+            realTime = dt;
+            return true;
+        } catch (const Exiv2::Error& error) {
+            kWarning() << "Failed to read date from exif header of" << path << ". Error:" << error.what();
+            return false;
+        }
     }
 };
 
